--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,32 +1,39 @@
-.App {
+.container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: auto;
+  background: transparent;
+  padding: 65px 0 0 0;
   text-align: center;
+  color: #001f5e;
+  border: none;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+
+.container input {
+  display: block;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background: #fff;
+  padding: 1em;
+  outline: none;
+  width: 100%;
+  margin-bottom: 1.5em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container button {
+  background: #1C3B58;
+  color: #ffffff;
+  border: 0px;
+  border-radius: 5px;
+  padding: 1em;
+  display: block;
+  width: 100%;
+  max-width: 250px;
+  margin: 0 auto 1.5em auto;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
 }
