--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,3 +1,13 @@
 .bg-red {
   background-color: #F5A732;
 }
+
+.navbar-dark .navbar-nav .nav-link {
+  color: #ffffff;
+  padding: 1rem;
+}
+
+.navbar-dark .navbar-nav .nav-link:active, .navbar-dark .navbar-nav .nav-link:hover {
+  color: #001f5e;
+  padding: 1rem;
+}
