--- a/src/components/App.css
+++ b/src/components/App.css
@@ -84,3 +84,15 @@ button.option-buttons {
 .bold {
   font-weight: bold;
 }
+
+.card-body .btn-danger {
+  color: #fff;
+  background-color: #dc3545;
+  border-color: #dc3545;
+}
+
+.card-body .btn-danger:hover {
+  color: #dc3545;
+  background-color: #fff;
+  border-color: #dc3545;
+}
