adds configuration to try to activate PWA functionalities

--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -2,12 +2,17 @@
   background-color: #F5A732;
 }
 
+.navbar-dark .navbar-brand {
+  color: #001f5e;
+  font-weight: bold;
+}
+
 .navbar-dark .navbar-nav .nav-link {
-  color: #ffffff;
+  color: #001f5e;
   padding: 1rem;
 }
 
 .navbar-dark .navbar-nav .nav-link:active, .navbar-dark .navbar-nav .nav-link:hover {
-  color: #001f5e;
+  color: #fff;
   padding: 1rem;
 }
